--- a/package.json
+++ b/package.json
@@ -2,14 +2,16 @@
   "name": "robotfriends",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://github.com/vladun13/robotfriends",
   "dependencies": {
-    "gh-pages": "^2.0.1",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "tachyons": "^4.11.1"
   },
   "scripts": {
     "start": "react-scripts start",
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -24,6 +26,7 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "gh-pages": "^2.0.1",
     "git-push": "^0.1.1",
     "react-scripts": "^2.1.3"
   }
